third_party/rust/paste/tests/ui/unsupported-modifier.stderr
error: unsupported modifier
 --> tests/ui/unsupported-modifier.rs:4:11
  |
4 |     fn [<a:pillow>]() {}
  |           ^^^^^^^
