third_party/rust/paste/tests/ui/unsupported-modifier.rs
use paste::paste;

paste! {
    fn [<a:pillow>]() {}
}

fn main() {}
